[package]
name = "sgf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
sgf-parse = "4.2.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"




